mainstyle.css
body {
	background-color: white;
	padding: 0;
	margin: 0;
	/*overflow-x: hidden;*/
}

table { empty-cells: show; }

/* Header */
#top_page_nav {
	height: 100px;
    min-width: 1000px;
    width: 100%;
    display: table;
    margin: 0;
    padding: 0;
}

.top_logo {
	height: 100px;
    width: 605px;
    margin: auto;
    display: table-cell;
    vertical-align: top;
	background: url('images/demonkings_header_center.png') top center no-repeat;
}

.top_logo_hover {
    background: url('images/demonkings_header_center_on.png') top center no-repeat;
}

.top_database_base {
	height: 100px;
    display: table-cell;
    position: relative;
    background: url('images/demonkings_header_left.png') top right no-repeat;
}

.top_database_hover {
    background: url('images/demonkings_header_left_on1.png') top right no-repeat;
}

.top_database_hover_2 {
    background: url('images/demonkings_header_left_on2.png') top right no-repeat;
}

#top_database {
    height: 30px;
    width: 123px;
    padding: 2px;
    display: block;
    position: absolute;
    bottom: 0;
    right: 42px;
}

.top_archive_base {
	height: 100px;
    display: table-cell;
    position: relative;
    background: url('images/demonkings_header_right.png') top left no-repeat;
}

.top_archive_hover {
    background: url('images/demonkings_header_right_on1.png') top left no-repeat;
}

.top_archive_hover_2 {
    background: url('images/demonkings_header_right_on2.png') top left no-repeat;
}

#top_archive {
    height: 30px;
    width: 100px;
    padding: 2px;
    display: block;
    position: absolute;
    bottom: 0;
    left: 43px;
}

#header_top_hive {
	height: 90px;
	margin: 4px;
	padding: 0;
	background: url('images/demonkings_top_hive.png') center center no-repeat;
}

/* Main Body */
#main_comic_center {
	height: 1537px;
    width: 1014px;
    margin: auto;
    position: relative;
    background: url('images/demonkings_page_frame.png') top center no-repeat;
}

#blank_page {
	height: 1350px;
    width: 100%;
    position: absolute;
    top: 24px;
    left: 26px;
    margin: auto;
    padding: 0;
    background: url('images/demonkings_blank_page.png') center center no-repeat;
}

#credit_bottom {
    height: 17px;
    width: 261px;
    position: absolute;
    bottom: 29px;
    right: 35px;
    background: url('images/demonkings_credit.png') bottom right no-repeat;
}

#main_charas_right {
    height: 1084px;
    width: 184px;
    position: absolute;
    top: 0;
    right: -200px;
    background: url('images/demonkings_char_bios_placeholder.png') no-repeat top right;
}

/* Chapter Navigation */
#chapter_num_top {
    height: 29px;
    width: 53px;
    position: absolute;
    top: 25px;
    left: 15px;
    z-index: 1;
    background: url('images/demonkings_chapter_top_placeholder.png') no-repeat;
}

#chapter_nav_left {
	height: 526px;
    width: 53px;
    background: url('images/demonkings_chaptertabs_base.png') top right no-repeat;
}

#chapter_text {
    height: 39px;
    width: 28px;
    position: absolute;
    top: 407px;
    left: 11px;
    background: url('images/demonkings_ch.png') no-repeat;
}

/* Comic Navigation Buttons */
#comic_nav_bottom {
    height: 90px;
    width: 411px;
    position: absolute;
    bottom: 62px;
    right: 30px;
    background: url('images/demonkings_comicnav_base.png') bottom right no-repeat;
}

#first_button {
    height: 90px;
    width: 90px;
    display: inline-block;
    float: left;
}

#first_button:hover {
    height: 90px;
    width: 90px;
    display: inline-block;
    float: left;
    background: url('images/demonkings_first_button_on.png') no-repeat;
}

#prev_button {
    height: 90px;
    width: 90px;
    margin-left: 17px;
    display: inline-block;
    float: left;
}

#prev_button:hover {
    height: 90px;
    width: 90px;
    display: inline-block;
    float: left;
    background: url('images/demonkings_prev_button_on.png') no-repeat;
}

#next_button {
    height: 90px;
    width: 90px;
    margin-left: 17px;
    display: inline-block;
    float: left;
}

#next_button:hover {
    height: 90px;
    width: 90px;
    display: inline-block;
    float: left;
    background: url('images/demonkings_next_button_on.png') no-repeat;
}

#last_button {
    height: 90px;
    width: 90px;
    margin-left: 17px;
    display: inline-block;
    float: left;
}

#last_button:hover {
    height: 90px;
    width: 90px;
    display: inline-block;
    float: left;
    background: url('images/demonkings_current_button_on.png') no-repeat;
}

/* Other Page Navigation */
#bottom_database {
    height: 169px;
    width: 963px;
    position: absolute;
    bottom: -94px;
    right: 0;
    background: url('images/demonkings_database_bottom.png') top right no-repeat;
}

#bottom_archive {
    height: 75px;
    width: 284px;
    position: absolute;
    bottom: 0;
    left: 192px;
    background: url('images/demonkings_archive_bottom.png') top right no-repeat;
}

/* Hiveworks Jump Bar Placeholder */
#hiveworks_jumpbar_placeholder {
    height: 43px;
    width: 544px;
    position: absolute;
    bottom: -70px;
    right: 33px;
    background: url('images/demonkings_jumpbar_placeholder.png') bottom right no-repeat;
}

/* Entry and Comments Area */
#commentarea_bottom {
    margin: auto;
    height: 100vh;
    width: 963px;
    position: relative;
    top: 94px;
    left: 25px;
}

#chapter_num_bottom {
    height: 35px;
    width: 66px;
    position: absolute;
    top: -54px;
    left: 60px;
    background: url('images/demonkings_chapter_bottom_placeholder.png') left top no-repeat;
}

#placeholder_frame_right {
    height: 609px;
    width: 340px;
    position: absolute;
    top: 0;
    right: -365px;
    background: url('images/demonkings_placeholder_frame_right.png') top right no-repeat;
}

#placeholder_right {
    height: 528px;
    width: 300px;
    margin: auto;
    padding-top: 40px;
    background: url('images/demonkings_right_placeholder.png') center center no-repeat;
}

#uedc_logo {
    height: 1261px;
    width: 1373px;
    margin-top: 25px;
    position: absolute;
    left: -205px;
    z-index: 1;
    background: url('images/demonkings_uedc_logo.png') top center no-repeat;
}

